# seam_carving_cd

./: .gitignore  CMakeLists.txt  README.md  build_msvc.bat  run_demo.bat  run_tests.bat  use_reference.bat
.github/workflows/: ci-cpp.yml
data/: generate_sample.py
docs/: module-contracts.md
reference/: demo.cpp  dp_search.cpp  energy_map.cpp  main.cpp  resize.cpp  seam_insert.cpp  seam_remove.cpp
src/: demo.cpp  dp_search.cpp  energy_map.cpp  image_io.cpp  main.cpp  resize.cpp  seam_carving.h  seam_insert.cpp  seam_remove.cpp
tests/: test_demo.cpp  test_dp_search.cpp  test_energy_map.cpp  test_framework.h  test_main.cpp  test_resize.cpp  test_seam_insert.cpp  test_seam_remove.cpp
